--- a/Pick-up_Point_App.csproj
+++ b/Pick-up_Point_App.csproj
@@ -65,10 +65,14 @@
     <Compile Include="Model\Order.cs" />
     <Compile Include="Model\Product Type.cs" />
     <Compile Include="Model\Product.cs" />
+    <Compile Include="Model\PuP-User.cs" />
     <Compile Include="Model\PuP.cs" />
     <Compile Include="Model\User.cs" />
+    <Compile Include="Stores\PuPListStore.cs" />
+    <Compile Include="Stores\PuPsUsersStore.cs" />
+    <Compile Include="Stores\UserPuPsDataStore.cs" />
     <Compile Include="Stores\UserListStore.cs" />
-    <Compile Include="Stores\UserStore.cs" />
+    <Compile Include="Stores\UserDataStore.cs" />
     <Compile Include="Stores\WindowTitleStore.cs" />
     <Compile Include="ViewModel\AddPageVM.cs" />
     <Compile Include="ViewModel\ErrorBox.cs" />
